--- a/examples/tutorials/mnist_pytorch/adaptive.yaml
+++ b/examples/tutorials/mnist_pytorch/adaptive.yaml
@@ -31,3 +31,10 @@ searcher:
   max_length:
     batches: 937 #60,000 training images with batch size 64
 entrypoint: model_def:MNistTrial
+environment:
+  environment_variables:
+    - DET_MASTER=192.168.201.75
+    - http_proxy=http://172.28.6.17:3128
+    - https_proxy=http://172.28.6.17:3128
+    - ftp_proxy=http://172.28.6.17:3128
+    - no_proxy=localhost,127.0.0.1,gl-hpe.local,10.111.135.214,192.168.201.75
