--- a/examples/tutorials/mnist_pytorch/distributed.yaml
+++ b/examples/tutorials/mnist_pytorch/distributed.yaml
@@ -9,7 +9,7 @@ hyperparameters:
   dropout1: 0.25
   dropout2: 0.5
 resources:
-  slots_per_trial: 8
+  slots_per_trial: 4
 searcher:
   name: single
   metric: validation_loss
@@ -17,3 +17,11 @@ searcher:
       batches: 117  #60,000 training images with batch size 512 (batch size 64 per GPU)
   smaller_is_better: true
 entrypoint: model_def:MNistTrial
+environment:
+  environment_variables:
+    - DET_MASTER=192.168.201.75
+    - http_proxy=http://172.28.6.17:3128
+    - https_proxy=http://172.28.6.17:3128
+    - ftp_proxy=http://172.28.6.17:3128
+    - no_proxy=localhost,127.0.0.1,gl-hpe.local,10.111.135.214,192.168.201.75
+    
