--- a/scratch/brain-mri/test1-onprem.yml
+++ b/scratch/brain-mri/test1-onprem.yml
@@ -1,6 +1,6 @@
 name: MRI-test1-on-prem-1GPU
-#workspace: jordan-scratch 
-#project: brain-mri
+workspace: nanos
+project: brain-mri
 data:
   data_dir:  '/data/lgg-mri-segmentation/kaggle_3m/'
   repo: 'mateuszbuda/brain-segmentation-pytorch'
